SERVER-10742 Allow a string of v characters in the verbose option

Conflicts:
	src/mongo/SConscript
	src/mongo/db/server_options.cpp